# rad

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDITING.md  CODING.md  CODING_RULES.md  CONFIG.md  Cargo.toml  EXTENSIONS.md  PLANNING.md  PLANS.md  README.md  TASKS.md  TESTING.md  TODO.md  rad.json  test_import.rs  update_models.py
.agents/: AGENTS.md
.cargo/: config.toml
.cocoindex_code/cocoindex.db/mdb/: data.mdb  lock.mdb
.github/workflows/: ci.yml  release.yml
.rad/sessions/: 1783330831.json  test_session.json
ext/context-tools/: Cargo.toml
ext/context-tools/src/: lib.rs
ext/core-tool-provider/: Cargo.toml
ext/core-tool-provider/src/: conv.rs  lib.rs
ext/llm-connector/: Cargo.toml
ext/llm-connector/src/: lib.rs
ext/mcp-tool-provider/: Cargo.toml
ext/mcp-tool-provider/src/: client.rs  conv.rs  default_tools.rs  lib.rs
ext/openai-connector/: Cargo.toml
ext/openai-connector/src/: lib.rs
ext/openai-orchestrator/: Cargo.toml
ext/openai-orchestrator/src/: conv.rs  lib.rs  llm.rs  mcp_client.rs  orchestrator.rs  security.rs  sse.rs  tests.rs  tool.rs  tool_runner.rs  types.rs
ext/rad-orchestrator/: Cargo.toml
ext/rad-orchestrator/src/: lib.rs  llm.rs  orchestrator.rs  types.rs
ext/security-guard/: Cargo.toml
ext/security-guard/src/: lib.rs
ext/web-access/: Cargo.toml
ext/web-access/src/: lib.rs  (+1 more)
models/: Cargo.toml
models/src/: dag.rs  lib.rs
scripts/: build_all.sh  check_licenses.py  check_secrets.sh
src/: command.rs  config.rs  dag.rs  error.rs  fs.rs  git.rs  http.rs  ipc.rs  lib.rs  main.rs  mcp.rs  orchestrator.rs  process.rs  repo_map.rs  session.rs  subsystems.rs  sys.rs  terminal.rs  wasm.rs
src/command/: completion.rs  llm.rs  tools.rs  tree.rs
src/config/: tests.rs
src/dag/: tests.rs
src/error/: tests.rs
src/fs/: snapshot.rs  tests.rs  watcher.rs
src/http/: tests.rs
src/ipc/: tests.rs
src/orchestrator/: autopilot.rs  runner.rs  tests.rs
src/process/: tests.rs
src/wasm/: bindings.rs  bindings_event.rs  imports.rs  imports_resources.rs  imports_rpc.rs  loader.rs  permissions.rs  rpc.rs  rpc_dag.rs  rpc_fs.rs  rpc_meta.rs  rpc_network.rs  rpc_process.rs  rpc_terminal.rs  test_module.wat  tests.rs
templates/go/: .gitignore  README.md  go.mod  main.go
templates/rust/: Cargo.toml  README.md
tests/: command_tests.rs  context_restoration_tests.rs  e2e_tests.rs  git_autopilot_tests.rs  hitl_tests.rs  mcp_tests.rs  multi_extension_tests.rs  repo_map_tests.rs  security_hook_tests.rs  self_healing_tests.rs  stabilization_tests.rs  tool_loop_tests.rs  web_access_tests.rs
wit/: context-tools.wit  llm-connector.wit  rad.wit  web-access.wit
(+9 files in other folders)
