[package]
name = "rad"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
jsonc-parser = { version = "0.26", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.29", features = ["process", "signal"] }
diffy = "0.3"
wasmtime = { version = "29.0.0", features = ["wat"] }
notify = "6.1.1"
portable-pty = "0.8"
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3.8"


