[package]
name = "rad"
version = "0.8.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wit-bindgen = "0.36.0"
thiserror = "2.0.18"
anyhow = "1.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonc-parser = { version = "0.26", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.29", features = ["process", "signal", "term"] }
diffy = "0.3"
wasmtime = { version = "29.0.0", features = ["wat", "component-model"] }
wasmtime-wasi = "29.0.0"
notify = "6.1.1"
portable-pty = "0.8"
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
futures-util = "0.3"
bytes = "1"
rustyline = "14.0"
crossterm = "0.27"
rad-models = { path = "models" }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

[dev-dependencies]
tempfile = "3.8"

[workspace]
members = [
    ".",
    "ext/context-tools",
    "ext/openai-orchestrator",
    "ext/security-guard",
    "ext/mcp-tool-provider",
    "ext/openai-connector",
    "ext/web-access",
    "models",
    "templates/rust",
]
